// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly for player 1 with 5 points 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "fontSize": 16,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "bottom": "75%",
        "color": "#4C9D00",
        "left": 160,
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
    ]
  }
  testID="total-score-1"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#4C9D00",
        },
      ]
    }
    testID="total-score-1-text"
  >
    5
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#6F6F7B",
          "fontWeight": "normal",
        },
      ]
    }
  >
     / 121
  </Text>
</View>
`;

exports[`renders correctly for player 2 with 42 points 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "fontSize": 16,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "color": "#0073E6",
        "right": 160,
        "top": "75%",
      },
    ]
  }
  testID="total-score-2"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#0073E6",
        },
      ]
    }
    testID="total-score-2-text"
  >
    42
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#6F6F7B",
          "fontWeight": "normal",
        },
      ]
    }
  >
     / 121
  </Text>
</View>
`;
